--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -17,10 +17,6 @@ permissions:
 jobs:
   linux:
     runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     strategy:
       matrix:
         platform:
@@ -45,7 +41,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist -m python/Cargo.toml
+          args: --release --out dist --find-interpreter
+          working-directory: codenav-python
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
@@ -56,10 +53,6 @@ jobs:
 
   musllinux:
     runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     strategy:
       matrix:
         platform:
@@ -80,7 +73,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist -m python/Cargo.toml
+          args: --release --out dist --find-interpreter
+          working-directory: codenav-python
           sccache: 'true'
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -91,10 +85,6 @@ jobs:
 
   windows:
     runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     strategy:
       matrix:
         platform:
@@ -112,7 +102,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist -m python/Cargo.toml
+          args: --release --out dist --find-interpreter
+          working-directory: codenav-python
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -122,10 +113,6 @@ jobs:
 
   macos:
     runs-on: ${{ matrix.platform.runner }}
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     strategy:
       matrix:
         platform:
@@ -142,7 +129,8 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist -m python/Cargo.toml
+          args: --release --out dist --find-interpreter
+          working-directory: codenav-python
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -152,10 +140,6 @@ jobs:
 
   sdist:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     steps:
       - uses: actions/checkout@v4
       - name: Build sdist
@@ -163,6 +147,7 @@ jobs:
         with:
           command: sdist
           args: --out dist
+          working-directory: codenav-python
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
@@ -172,10 +157,6 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: codenav-python
     if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
@@ -187,3 +168,4 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
+          working-directory: codenav-python
