--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -6,7 +6,7 @@ env:
 permissions:
   contents: write
   id-token: write
-'on':
+on:
   push:
     branches:
       - main
@@ -19,8 +19,9 @@ permissions:
       - .editorconfig
       - docs/**
   pull_request:
-    - codenav-nodejs/**
-    - .github/workflows/javascript.yml
+    paths:
+      - codenav-nodejs/**
+      - .github/workflows/javascript.yml
 jobs:
   build:
     strategy:
