--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -41,7 +41,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           working-directory: codenav-python
           sccache: 'true'
           manylinux: auto
@@ -73,7 +73,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           working-directory: codenav-python
           sccache: 'true'
           manylinux: musllinux_1_2
@@ -102,7 +102,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           working-directory: codenav-python
           sccache: 'true'
       - name: Upload wheels
@@ -129,7 +129,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           working-directory: codenav-python
           sccache: 'true'
       - name: Upload wheels
