--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -142,7 +142,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: sdist
-          args: --out dist
+          args: --out dist -m codenav-python/Cargo.toml
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
