--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -141,6 +141,8 @@ jobs:
       - name: Build sdist
         uses: PyO3/maturin-action@v1
         with:
+          # version pinned until https://github.com/PyO3/maturin/issues/2154 is fixed
+          maturin-version: v1.6.0
           command: sdist
           args: --out dist -m codenav-python/Cargo.toml
       - name: Upload sdist
