--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -85,7 +85,6 @@ jobs:
     runs-on: ${{ matrix.settings.host }}
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -95,6 +94,7 @@ jobs:
         with:
           node-version: 20
           cache: yarn
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install
         uses: dtolnay/rust-toolchain@stable
         if: ${{ !matrix.settings.docker }}
@@ -132,6 +132,7 @@ jobs:
           node-version: 20
           cache: yarn
           architecture: x86
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Build in docker
         uses: addnab/docker-run-action@v3
         if: ${{ matrix.settings.docker }}
@@ -154,7 +155,6 @@ jobs:
     name: Build FreeBSD
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -218,7 +218,6 @@ jobs:
     runs-on: ${{ matrix.settings.host }}
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -228,6 +227,7 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: yarn
           architecture: x64
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
         run: yarn install
       - name: Download artifacts
@@ -253,7 +253,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -262,6 +261,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: yarn
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
         run: yarn install
       - name: Download artifacts
@@ -287,7 +287,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -296,6 +295,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: yarn
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
         run: |
           yarn config set supportedArchitectures.libc "musl"
@@ -323,7 +323,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -361,7 +360,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -404,7 +402,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -441,7 +438,6 @@ jobs:
     runs-on: macos-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     steps:
       - uses: actions/checkout@v4
@@ -450,6 +446,7 @@ jobs:
         with:
           node-version: 20
           cache: yarn
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
         run: yarn install
       - name: Download macOS x64 artifact
@@ -475,7 +472,6 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash
         working-directory: codenav-nodejs
     needs:
       - build-freebsd
@@ -493,6 +489,7 @@ jobs:
         with:
           node-version: 20
           cache: yarn
+          cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
         run: yarn install
       - name: Download all artifacts
