--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,6 +2,7 @@ name: Nodejs
 
 env:
   APP_NAME: codenav
+  CUSTOM_WORKSPACE: ${{ github.workspace }}/codenav-nodejs
 
 permissions:
   contents: read
@@ -141,7 +142,7 @@ jobs:
         if: ${{ matrix.settings.docker }}
         with:
           image: ${{ matrix.settings.docker }}
-          options: '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build'
+          options: '--user 0:0 -v ${{ env.CUSTOM_WORKSPACE }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
           run: ${{ matrix.settings.build }}
       - name: Build
         run: ${{ matrix.settings.build }}
@@ -351,7 +352,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ matrix.node }}-slim
-          options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
+          options: '--platform linux/arm64 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
           run: |
             set -e
             yarn test
@@ -388,7 +389,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:lts-alpine
-          options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
+          options: '--platform linux/arm64 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
           run: |
             set -e
             yarn test
@@ -429,7 +430,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ matrix.node }}-bullseye-slim
-          options: '--platform linux/arm/v7 -v ${{ github.workspace }}:/build -w /build'
+          options: '--platform linux/arm/v7 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
           run: |
             set -e
             yarn test
