--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,7 +5,8 @@ env:
   CUSTOM_WORKSPACE: ${{ github.workspace }}/codenav-nodejs
 
 permissions:
-  contents: read
+  contents: write
+  id-token: write
 on:
   push:
     branches:
