--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -142,7 +142,7 @@ jobs:
         with:
           image: ${{ matrix.settings.docker }}
           options: '--user 0:0 -v ${{ env.CUSTOM_WORKSPACE }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
-          run: ${{ matrix.settings.build }}
+          run: cd /github/workspace/codenav-nodejs && ${{ matrix.settings.build }}
       - name: Build
         run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
