--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -141,8 +141,8 @@ jobs:
         if: ${{ matrix.settings.docker }}
         with:
           image: ${{ matrix.settings.docker }}
-          options: '--user 0:0 -v ${{ env.CUSTOM_WORKSPACE }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ env.CUSTOM_WORKSPACE }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
-          run: echo $INPUT_OPTIONS && cd /build && ${{ matrix.settings.build }}
+          options: '--user 0:0 -v ${{ github.workspace }}/.cargo-cache/git/db:/usr/local/cargo/git/db -v ${{ github.workspace }}/.cargo/registry/cache:/usr/local/cargo/registry/cache -v ${{ github.workspace }}/.cargo/registry/index:/usr/local/cargo/registry/index -v ${{ github.workspace }}:/build -w /build'
+          run: cd /build/codenav-nodejs && ${{ matrix.settings.build }}
       - name: Build
         run: ${{ matrix.settings.build }}
         if: ${{ !matrix.settings.docker }}
@@ -351,9 +351,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ matrix.node }}-slim
-          options: '--platform linux/arm64 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
+          options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
           run: |
-            cd /build
+            cd /build/codenav-nodejs
             set -e
             yarn test
             ls -la
@@ -389,9 +389,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:lts-alpine
-          options: '--platform linux/arm64 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
+          options: '--platform linux/arm64 -v ${{ github.workspace }}:/build -w /build'
           run: |
-            cd /build
+            cd /build/codenav-nodejs
             set -e
             yarn test
   test-linux-arm-gnueabihf-binding:
@@ -431,9 +431,9 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
           image: node:${{ matrix.node }}-bullseye-slim
-          options: '--platform linux/arm/v7 -v ${{ env.CUSTOM_WORKSPACE }}:/build -w /build'
+          options: '--platform linux/arm/v7 -v ${{ github.workspace }}:/build -w /build'
           run: |
-            cd /build
+            cd /build/codenav-nodejs
             set -e
             yarn test
             ls -la
