--- a/codenav-nodejs/package.json
+++ b/codenav-nodejs/package.json
@@ -26,10 +26,24 @@
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.18.4",
-    "ava": "^6.0.1"
+    "@swc-node/register": "^1.10.6",
+    "@swc/core": "^1.6.13",
+    "ava": "^6.1.3",
+    "typescript": "^5.5.3"
   },
   "ava": {
-    "timeout": "3m"
+    "extensions": {
+      "ts": "module"
+    },
+    "timeout": "2m",
+    "workerThreads": false,
+    "environmentVariables": {
+      "TS_NODE_PROJECT": "./tsconfig.json"
+    },
+    "nodeArguments": [
+      "--import",
+      "@swc-node/register/esm-register"
+    ]
   },
   "engines": {
     "node": ">= 10"
