--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -213,7 +213,7 @@ jobs:
         settings:
           - host: macos-latest
             target: x86_64-apple-darwin
-          # There are issues with windows
+          # There are some issues with stack-graphs on Windows.
           # see https://github.com/RussellLuo/codenav/actions/runs/10915527605/job/30295604917
           #- host: windows-latest
           #  target: x86_64-pc-windows-msvc
@@ -504,8 +504,11 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: codenav-nodejs/artifacts
+      - name: List artifacts
+        run: ls -R ./artifacts && ls -R codenav-nodejs/artifacts
+        shell: bash
       - name: Move artifacts
-        run: yarn artifacts
+        run: yarn artifacts --dir codenav-nodejs/artifacts --dist codenav-nodejs/npm
       - name: List packages
         run: ls -R ./npm
         shell: bash
