--- a/codenav-nodejs/npm/freebsd-x64/package.json
+++ b/codenav-nodejs/npm/freebsd-x64/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "@napi-rs/package-template-freebsd-x64",
-  "version": "1.0.0",
+  "name": "@codenav/codenav-freebsd-x64",
+  "version": "0.0.0",
   "os": [
     "freebsd"
   ],
   "cpu": [
     "x64"
   ],
-  "main": "package-template.freebsd-x64.node",
+  "main": "codenav.freebsd-x64.node",
   "files": [
-    "package-template.freebsd-x64.node"
+    "codenav.freebsd-x64.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
-  "keywords": [
-    "napi-rs",
-    "NAPI",
-    "N-API",
-    "Rust",
-    "node-addon",
-    "node-addon-api"
-  ],
+  "description": "Node.js bindings for CodeNav.",
   "license": "MIT",
   "engines": {
     "node": ">= 10"
   },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  "repository": "https://github.com/RussellLuo/codenav"
 }
