--- a/codenav-nodejs/npm/linux-arm64-musl/package.json
+++ b/codenav-nodejs/npm/linux-arm64-musl/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "@napi-rs/package-template-linux-arm64-musl",
-  "version": "1.0.0",
+  "name": "@codenav/codenav-linux-arm64-musl",
+  "version": "0.0.0",
   "os": [
     "linux"
   ],
   "cpu": [
     "arm64"
   ],
-  "libc": [
-    "musl"
-  ],
-  "main": "package-template.linux-arm64-musl.node",
+  "main": "codenav.linux-arm64-musl.node",
   "files": [
-    "package-template.linux-arm64-musl.node"
+    "codenav.linux-arm64-musl.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
-  "keywords": [
-    "napi-rs",
-    "NAPI",
-    "N-API",
-    "Rust",
-    "node-addon",
-    "node-addon-api"
-  ],
+  "description": "Node.js bindings for CodeNav.",
   "license": "MIT",
   "engines": {
     "node": ">= 10"
   },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  "repository": "https://github.com/RussellLuo/codenav",
+  "libc": [
+    "musl"
+  ]
 }
