--- a/codenav-nodejs/npm/win32-ia32-msvc/package.json
+++ b/codenav-nodejs/npm/win32-ia32-msvc/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "@napi-rs/package-template-win32-ia32-msvc",
-  "version": "1.0.0",
+  "name": "@codenav/codenav-win32-ia32-msvc",
+  "version": "0.0.0",
   "os": [
     "win32"
   ],
   "cpu": [
     "ia32"
   ],
-  "main": "package-template.win32-ia32-msvc.node",
+  "main": "codenav.win32-ia32-msvc.node",
   "files": [
-    "package-template.win32-ia32-msvc.node"
+    "codenav.win32-ia32-msvc.node"
   ],
-  "description": "Template project for writing node package with napi-rs",
-  "keywords": [
-    "napi-rs",
-    "NAPI",
-    "N-API",
-    "Rust",
-    "node-addon",
-    "node-addon-api"
-  ],
+  "description": "Node.js bindings for CodeNav.",
   "license": "MIT",
   "engines": {
     "node": ">= 10"
   },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "repository": "git@github.com:napi-rs/package-template.git"
+  "repository": "https://github.com/RussellLuo/codenav"
 }
