--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,16 +11,11 @@ on:
   push:
     branches:
       - main
-    tags-ignore:
-      - '**'
-    paths-ignore:
-      - '**/*.md'
-      - LICENSE
-      - '**/*.gitignore'
-      - .editorconfig
-      - docs/**
+    tags:
+      - 'nodejs-v*'
   pull_request:
     paths:
+      - src/**
       - codenav-nodejs/**
       - .github/workflows/nodejs.yml
 jobs:
@@ -478,6 +473,7 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    #if: "startsWith(github.ref, 'refs/tags/')"
     defaults:
       run:
         working-directory: codenav-nodejs
@@ -504,6 +500,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: codenav-nodejs/artifacts
+      - name: List artifacts
+        run: ls -R ./artifacts
       - name: Move artifacts
         run: yarn artifacts --dir artifacts --dist npm
       - name: List packages
