--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -473,7 +473,7 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    #if: "startsWith(github.ref, 'refs/tags/')"
+    if: "startsWith(github.ref, 'refs/tags/')"
     defaults:
       run:
         working-directory: codenav-nodejs
