--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -5,9 +5,10 @@ on:
     branches:
       - main
     tags:
-      - '*'
+      - 'python-v*'
   pull_request:
     paths:
+      - src/**
       - codenav-python/**
       - .github/workflows/python.yml
 
@@ -41,8 +42,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          working-directory: codenav-python
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           sccache: 'true'
           manylinux: auto
       - name: Upload wheels
@@ -73,8 +73,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          working-directory: codenav-python
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           sccache: 'true'
           manylinux: musllinux_1_2
       - name: Upload wheels
@@ -102,8 +101,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          working-directory: codenav-python
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -129,8 +127,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --find-interpreter
-          working-directory: codenav-python
+          args: --release --out dist --find-interpreter -m codenav-python/Cargo.toml
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
@@ -145,9 +142,10 @@ jobs:
       - name: Build sdist
         uses: PyO3/maturin-action@v1
         with:
+          # version pinned until https://github.com/PyO3/maturin/issues/2154 is fixed
+          maturin-version: v1.6.0
           command: sdist
-          args: --out dist
-          working-directory: codenav-python
+          args: --out dist -m codenav-python/Cargo.toml
       - name: Upload sdist
         uses: actions/upload-artifact@v4
         with:
@@ -168,4 +166,3 @@ jobs:
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
-          working-directory: codenav-python
