--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,10 @@ tree-sitter = "0.20.4"
 #tree-sitter-rust = "0.23"
 #tree-sitter-python = "0.23"
 tree-sitter-python = "0.20.4"
+tree-sitter-javascript = "0.20.4"
 tree-sitter-stack-graphs = "0.9"
 tree-sitter-stack-graphs-python = "0.2"
+tree-sitter-stack-graphs-javascript = "0.2"
 tree-sitter-graph = "0.11"
 stack-graphs = "0.14"
 string-builder = "0.2.0"
