codenav-python: Update bindings and examples

--- a/codenav-python/pyproject.toml
+++ b/codenav-python/pyproject.toml
@@ -4,6 +4,10 @@ build-backend = "maturin"
 
 [project]
 name = "codenav-python"
+version = "0.0.1"
+description = "Python bindings for CodeNav."
+authors = [{ name = "RussellLuo", email = "luopeng.he@gmail.com" }]
+readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Rust",
@@ -11,6 +15,9 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 dynamic = ["version"]
+
+[project.urls]
+repository = "https://github.com/RussellLuo/codenav"
 
 [tool.maturin]
 module-name = "codenav"
