--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,14 +25,17 @@ jobs:
             target: x86_64
           - runner: ubuntu-latest
             target: x86
-          # Note that aarch64, s390x and ppc64le are commented out since there are some issues when building tree-sitter-javascript v0.20.4:
+          # Note that aarch64, armv7, s390x and ppc64le are commented out since there are some issues
+          # when building tree-sitter-javascript v0.20.4 and tree-sitter-typescript v0.20.2:
+          #
           #     error: 'for' loop initial declarations are only allowed in C99 mode
-          # See https://github.com/RussellLuo/codenav/actions/runs/10961482459/job/30438509720
+          #
+          # See https://github.com/RussellLuo/codenav/actions/runs/10961482459/job/30438509720.
           #
           #- runner: ubuntu-latest
           #  target: aarch64
-          - runner: ubuntu-latest
-            target: armv7
+          #- runner: ubuntu-latest
+          #  target: armv7
           #- runner: ubuntu-latest
           #  target: s390x
           #- runner: ubuntu-latest
