--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -162,7 +162,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    #if: "startsWith(github.ref, 'refs/tags/')"
+    if: "startsWith(github.ref, 'refs/tags/')"
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/checkout@v4
@@ -177,11 +177,11 @@ jobs:
               - 'codenav-python/pyproject.toml'
       - uses: actions/download-artifact@v4
         if: steps.filter.outputs.python == 'true'
-      #- name: Publish to PyPI
-      #  if: steps.filter.outputs.python == 'true'
-      #  uses: PyO3/maturin-action@v1
-      #  env:
-      #    MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-      #  with:
-      #    command: upload
-      #    args: --non-interactive --skip-existing wheels-*/*
+      - name: Publish to PyPI
+        if: steps.filter.outputs.python == 'true'
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        with:
+          command: upload
+          args: --non-interactive --skip-existing wheels-*/*
