--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -470,10 +470,29 @@ jobs:
           name: bindings-universal-apple-darwin
           path: codenav-nodejs/${{ env.APP_NAME }}.*.node
           if-no-files-found: error
+
+  check-release:
+    runs-on: ubuntu-latest
+    outputs:
+      release: ${{ steps.check-release-commit.outputs.release }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Check if it's a release commit
+      id: check-release-commit
+      run: |
+        commit_message=$(git log --format=%B -n 1)
+        echo "Commit message: '$commit_message'"
+        if [[ "$commit_message" =~ ^Release\ v[0-9]+(\.[0-9]+)* ]]; then
+          echo "::set-output name=release::true"
+        else
+          echo "::set-output name=release::false"
+        fi
+
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: needs.check-release.outputs.release == 'true'
     defaults:
       run:
         working-directory: codenav-nodejs
