--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -159,10 +159,28 @@ jobs:
           name: wheels-sdist
           path: dist
 
+  check-release:
+    runs-on: ubuntu-latest
+    outputs:
+      release: ${{ steps.check-release-commit.outputs.release }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Check if it's a release commit
+      id: check-release-commit
+      run: |
+        commit_message=$(git log --format=%B -n 1)
+        echo "Commit message: '$commit_message'"
+        if [[ "$commit_message" =~ ^Release\ v[0-9]+(\.[0-9]+)* ]]; then
+          echo "::set-output name=release::true"
+        else
+          echo "::set-output name=release::false"
+        fi
+
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: needs.check-release.outputs.release == 'true'
     needs: [linux, musllinux, windows, macos, sdist]
     steps:
       - uses: actions/checkout@v4
