--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -518,27 +518,28 @@ jobs:
               - 'codenav-nodejs/package.json'
       - name: Setup node
         uses: actions/setup-node@v4
+        #if: steps.filter.outputs.nodejs == 'true'
         with:
           node-version: 20
           cache: yarn
           cache-dependency-path: codenav-nodejs/yarn.lock
       - name: Install dependencies
-        if: steps.filter.outputs.nodejs == 'true'
+        #if: steps.filter.outputs.nodejs == 'true'
         run: yarn install
       - name: Download all artifacts
-        if: steps.filter.outputs.nodejs == 'true'
+        #if: steps.filter.outputs.nodejs == 'true'
         uses: actions/download-artifact@v4
         with:
           path: codenav-nodejs/artifacts
       - name: Move artifacts
-        if: steps.filter.outputs.nodejs == 'true'
+        #if: steps.filter.outputs.nodejs == 'true'
         run: yarn artifacts --dir artifacts --dist npm
       - name: List packages
-        if: steps.filter.outputs.nodejs == 'true'
+        #if: steps.filter.outputs.nodejs == 'true'
         run: ls -R ./npm
         shell: bash
       - name: Publish
-        if: steps.filter.outputs.nodejs == 'true'
+        #if: steps.filter.outputs.nodejs == 'true'
         run: |
           npm config set provenance true
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
