--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -194,9 +194,9 @@ jobs:
               - 'codenav-python/Cargo.toml'
               - 'codenav-python/pyproject.toml'
       - uses: actions/download-artifact@v4
-        if: steps.filter.outputs.python == 'true'
+        #if: steps.filter.outputs.python == 'true'
       - name: Publish to PyPI
-        if: steps.filter.outputs.python == 'true'
+        #if: steps.filter.outputs.python == 'true'
         uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
