--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -180,8 +180,8 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    #if: needs.check-release.outputs.release == 'true'
-    needs: [linux, musllinux, windows, macos, sdist]
+    if: needs.check-release.outputs.release == 'true'
+    needs: [linux, musllinux, windows, macos, sdist, check-release]
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
@@ -194,9 +194,9 @@ jobs:
               - 'codenav-python/Cargo.toml'
               - 'codenav-python/pyproject.toml'
       - uses: actions/download-artifact@v4
-        #if: steps.filter.outputs.python == 'true'
+        if: steps.filter.outputs.python == 'true'
       - name: Publish to PyPI
-        #if: steps.filter.outputs.python == 'true'
+        if: steps.filter.outputs.python == 'true'
         uses: PyO3/maturin-action@v1
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
