--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -478,7 +478,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        # See https://github.com/actions/checkout?#Checkout-pull-request-HEAD-commit-instead-of-merge-commit
+        # See https://github.com/actions/checkout#Checkout-pull-request-HEAD-commit-instead-of-merge-commit
         # and https://github.com/actions/checkout/issues/426
         ref: ${{ github.event.pull_request.head.sha }}
     - name: Check if it's a release commit
