--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -196,11 +196,9 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: filter
         with:
+          # "version" in pyproject.toml will be bumped
           filters: |
             python:
-              - 'src/**'
-              - 'codenav-python/src/**'
-              - 'codenav-python/Cargo.toml'
               - 'codenav-python/pyproject.toml'
       - uses: actions/download-artifact@v4
         if: steps.filter.outputs.python == 'true'
