--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -175,9 +175,9 @@ jobs:
         commit_message=$(git log --format=%B -n 1)
         echo "Commit message: '$commit_message'"
         if [[ "$commit_message" =~ ^Release\ v[0-9]+(\.[0-9]+)* ]]; then
-          echo "::set-output name=release::true"
+          echo "release=true" >> $GITHUB_OUTPUT
         else
-          echo "::set-output name=release::false"
+          echo "release=false" >> $GITHUB_OUTPUT
         fi
 
   release:
