--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -159,21 +159,46 @@ jobs:
           name: wheels-sdist
           path: dist
 
+  check-release:
+    runs-on: ubuntu-latest
+    outputs:
+      release: ${{ steps.check-release-commit.outputs.release }}
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        # See https://github.com/actions/checkout#Checkout-pull-request-HEAD-commit-instead-of-merge-commit
+        # and https://github.com/actions/checkout/issues/426
+        ref: ${{ github.event.pull_request.head.sha }}
+    - name: Check if it's a release commit
+      id: check-release-commit
+      run: |
+        commit_message=$(git log --format=%B -n 1)
+        echo "Commit message: '$commit_message'"
+        if [[ "$commit_message" =~ ^Release\ v[0-9]+(\.[0-9]+)* ]]; then
+          echo "release=true" >> $GITHUB_OUTPUT
+        else
+          echo "release=false" >> $GITHUB_OUTPUT
+        fi
+
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [linux, musllinux, windows, macos, sdist]
+    if: needs.check-release.outputs.release == 'true'
+    needs:
+      - linux
+      - musllinux
+      - windows
+      - macos
+      - sdist
+      - check-release
     steps:
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: filter
         with:
+          # "version" in pyproject.toml will be bumped
           filters: |
             python:
-              - 'src/**'
-              - 'codenav-python/src/**'
-              - 'codenav-python/Cargo.toml'
               - 'codenav-python/pyproject.toml'
       - uses: actions/download-artifact@v4
         if: steps.filter.outputs.python == 'true'
